--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,25 @@
     </dependencies>
 
 	<build>
-		<defaultGoal>compile</defaultGoal>  
+		<defaultGoal>compile</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
 
+					<!--<testFailureIgnore>true</testFailureIgnore>-->
+
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
 		</plugins>
 
 	</build>
